<resources>
    <string name="app_name">Api_Call</string>
    <string name="require">*Require</string>
    <string name="enter_page_number">Enter Page Number</string>
    <string name="simple_api_call_page_fetching">Simple Api Call Page Fetching</string>
    <string name="api_call_with_pagination">Api Call With Pagination</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="created_at">Created At</string>
    <string name="title">Title</string>
    <string name="permission_dialog_title">Require Permission</string>
    <string name="permission_dialog_positive_button">Yes\\</string>
    <string name="permission_dialog_negative_button">No</string>
    <string name="permission_dialog_message_for_page_details">For get Page Data require to Internet permission,For give permission click \"Yes\"</string>
    <string name="error">Error</string>
    <string name="page_empty">Page is Empty</string>
    <string name="no_internet_error">Oops ! No Internet Please Turn on Internet  For Fetch Data</string>
    <string name="api_call_with_json">Api call with Json</string>
    <string name="api_call_with_multipart">Api Call with Multipart</string>
    <string name="enter_title_of_book">Enter Title Of Book</string>
    <string name="enter_url_of_book">Enter Url of book</string>
    <string name="todo">TODO</string>
    <string name="post">Post</string>
    <string name="created_at_">Created At:</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
</resources>